--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-hello
+Daniel Gutierrez Diez
+
+       Software Engineer with several years experience in the IT world as consultant, developer, trainer and team lead.
+
+       Currently working as tech lead for Interactive Data in Frankfurt
+
+       Curriculum Vitae in pdf
+
+Collaborations:
+
+       Java Code Geeks
+
+Links
+       GitHub
+
+       Facebook
+
+       Twitter
+
+       LinkedIn
+
+       Xing
+
+       PinInterest
+
+       About.me
+
+       Spotify
+
+       Stackoverflow
+
+       and many others, just search for danibuiza
