--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
-Daniel Gutierrez Diez
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>Daniel Gutierrez Diez</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <link rel="stylesheet" type="text/css" href="./css/yo.css">
+    <base target="_blank">
+</head>
+<body>
 
-       Software Engineer with several years experience in the IT world as consultant, developer, trainer and team lead.
 
-       Currently working as tech lead for Interactive Data in Frankfurt
+<div>
+    <h1>Daniel Gutierrez Diez</h1>
+</div>
 
-       Curriculum Vitae in pdf
+<div>
+    <br/>Software Engineer with several years experience in the IT world as consultant, developer, trainer and team
+    lead.<br/>
 
-Collaborations:
+    <br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
 
-       Java Code Geeks
+    <br/>Father.<br/>
 
-Links
-       GitHub
+    <br/>Proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
 
-       Facebook
+    <br/>
 
-       Twitter
+    <h3><a href="">Curriculum Vitae in pdf</a></h3><br/>
+</div>
 
-       LinkedIn
+<div>
+    <h3>Collaborations</h3>
 
-       Xing
+    <br/><a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks</a><br/>
 
-       PinInterest
+    <br/><a href="http://danibuiza.wordpress.com/">Personal Blog</a><br/>
 
-       About.me
+    <br/><a href="http://helloworldforbegginers.wordpress.com/">IT Blog</a><br/>
 
-       Spotify
+    <h3>In the web</h3>
 
-       Stackoverflow
+    <br/><a href="https://github.com/danibuiza">GitHub</a><br/>
 
-       and many others, just search for danibuiza
+    <br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a><br/>
+
+    <br/><a href="https://www.xing.com/profile/DanielJose_GutierrezDiez">Xing</a><br/>
+
+    <br/><a href="http://about.me/danibuiza">About.me</a><br/>
+
+    <br/><a href="https://gist.github.com/danibuiza">Gists</a><br/>
+
+    <br/><a href="https://twitter.com/danibuiza">Twitter</a><br/>
+
+    <br/><a href="https://www.facebook.com/profile.php?id=554250456">Facebook</a><br/>
+
+    <br/><a href="https://plus.google.com/u/0/116967718539287219109/posts">Google Plus</a><br/>
+
+    <br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a><br/>
+
+    <br/>and many others, just search for <a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a><br/>
+</div>
+
+</body>
