--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <br/>
 
-    <h3><a href="">Curriculum Vitae in pdf</a></h3><br/>
+    <h3><a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae in pdf</a></h3><br/>
 </div>
 
 <div>
