--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
     <br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a><br/>
 
+    <br/><a href="http://www.dzone.com/links/users/profile/1264401.html">DZone</a><br/>
+
     <br/>and many others, just search for <a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a><br/>
 </div>
 
