--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div>
-    <br/>Software Engineer with several years experience in the IT world as consultant, developer, trainer and team
+    <br/>Software Engineer with several years experience consultant, developer, trainer and team
     lead.<br/>
 
     <br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
