--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
 
-    <br/>Father.<br/>
+    <br/>Father and husband.<br/>
 
     <br/>Proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
 
