--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <div>
     <h3>Collaborations</h3>
 
-    <br/><a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks</a><br/>
+    <br/><a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks examples</a><br/>
+
+    <br/><a href="http://www.javacodegeeks.com/author/dani-buiza/">Java Code Geeks tutorials</a><br/>
 
     <br/><a href="http://danibuiza.wordpress.com/">Personal Blog</a><br/>
 
