changes to index.html

--- a/index.html
+++ b/index.html
@@ -1,68 +1,46 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>Daniel Gutierrez Diez</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <link rel="stylesheet" type="text/css" href="./css/yo.css">
-    <base target="_blank">
+	<title>Daniel Gutierrez Diez</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<link rel="stylesheet" type="text/css" href="./css/yo.css">
+	<base target="_blank">
 </head>
 <body>
 
-
-<div>
-    <h1>Daniel Gutierrez Diez</h1>
+<div style="width:100%;">
+	<div style="float: left; width: 50%; ">
+		<br/>Software Engineer with several years experience as consultant, developer, trainer and team
+		lead.<br/>
+		<br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
+		<br/>Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.<br/>
+		<br/>Father of 1 and husband (also of 1).<br/>
+		<br/>Proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
+		<br/>
+		<h3><a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae in pdf</a></h3><br/>
+	</div>
+	
+	<div style="display: inline-block; width: 40%; margin-left:5px;">
+		<br/>Java examples for the <a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks examples.</a><br/>
+		<br/>Tutorials for the <a href="http://www.javacodegeeks.com/author/dani-buiza/">Java Code Geeks tutorials.</a><br/>
+		<br/><a href="http://danibuiza.wordpress.com/">My Personal Blog</a> with things I want to remember.<br/>
+		<br/><a href="http://helloworldforbegginers.wordpress.com/">IT Blog</a> with things I should remember.<br/>
+	
+	</div>
+	
+	<div style="float: right; width: 9%; ">
+		<br/><a href="https://github.com/danibuiza">GitHub</a><br/>
+		<br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a><br/>
+		<br/><a href="https://www.xing.com/profile/DanielJose_GutierrezDiez">Xing</a><br/>
+		<br/><a href="http://about.me/danibuiza">About.me</a><br/>
+		<br/><a href="https://gist.github.com/danibuiza">Gists</a><br/>
+		<br/><a href="https://twitter.com/danibuiza">Twitter</a><br/>
+		<br/><a href="https://www.facebook.com/profile.php?id=554250456">Facebook</a><br/>
+		<br/><a href="https://plus.google.com/u/0/116967718539287219109/posts">Google Plus</a><br/>
+		<br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a><br/>
+		<br/><a href="http://www.dzone.com/links/users/profile/1264401.html">DZone</a><br/>
+		<br/><a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a><br/>
+	</div>
 </div>
-
-<div>
-    <br/>Software Engineer with several years experience as consultant, developer, trainer and team
-    lead.<br/>
-
-    <br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
-
-    <br/>Father and husband.<br/>
-
-    <br/>Proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
-
-    <br/>
-
-    <h3><a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae in pdf</a></h3><br/>
-</div>
-
-<div>
-    <h3>Collaborations</h3>
-
-    <br/><a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks examples</a><br/>
-
-    <br/><a href="http://www.javacodegeeks.com/author/dani-buiza/">Java Code Geeks tutorials</a><br/>
-
-    <br/><a href="http://danibuiza.wordpress.com/">Personal Blog</a><br/>
-
-    <br/><a href="http://helloworldforbegginers.wordpress.com/">IT Blog</a><br/>
-
-    <h3>In the web</h3>
-
-    <br/><a href="https://github.com/danibuiza">GitHub</a><br/>
-
-    <br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a><br/>
-
-    <br/><a href="https://www.xing.com/profile/DanielJose_GutierrezDiez">Xing</a><br/>
-
-    <br/><a href="http://about.me/danibuiza">About.me</a><br/>
-
-    <br/><a href="https://gist.github.com/danibuiza">Gists</a><br/>
-
-    <br/><a href="https://twitter.com/danibuiza">Twitter</a><br/>
-
-    <br/><a href="https://www.facebook.com/profile.php?id=554250456">Facebook</a><br/>
-
-    <br/><a href="https://plus.google.com/u/0/116967718539287219109/posts">Google Plus</a><br/>
-
-    <br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a><br/>
-
-    <br/><a href="http://www.dzone.com/links/users/profile/1264401.html">DZone</a><br/>
-
-    <br/>and many others, just search for <a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a><br/>
-</div>
-
 </body>
