--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	</div>
 	
 	<div style="display: inline-block; width: 40%; margin-left:5px;">
-		<br/>Java examples for the <a href="http://examples.javacodegeeks.com/author/dani-buiza/">Java Code Geeks examples.</a><br/>
-		<br/>Tutorials for the <a href="http://www.javacodegeeks.com/author/dani-buiza/">Java Code Geeks tutorials.</a><br/>
+		<br/>Java examples published in <a href="http://examples.javacodegeeks.com/author/dani-buiza/">http://examples.javacodegeeks.com/author/dani-buiza/.</a><br/>
+		<br/>Tutorials published in the <a href="http://www.javacodegeeks.com/author/dani-buiza/">ttp://www.javacodegeeks.com/author/dani-buiza/</a><br/>
 		<br/><a href="http://danibuiza.wordpress.com/">My Personal Blog</a> with things I want to remember.<br/>
 		<br/><a href="http://helloworldforbegginers.wordpress.com/">IT Blog</a> with things I should remember.<br/>
 	
