changes in index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Daniel Gutierrez Diez</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<link rel="shortcut icon" href=".images/wm.ico"/>
-    <link rel="icon" href=".images/wm.png"/>
+	<link rel="shortcut icon" href="./images/wm.ico"/>
+    <link rel="icon" href="./images/wm.png"/>
 	<link rel="stylesheet" type="text/css" href="./css/yo.css">
 	<base target="_blank">
 </head>
