changes in index

--- a/index.html
+++ b/index.html
@@ -13,22 +13,12 @@
 
 <div style="width:100%;">
 	<div style="float: left; width: 50%; ">
-		<br/>Software Engineer with several years experience as consultant, developer, trainer and team
-		lead.<br/>
-		<br/>Currently working as tech lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.<br/>
-		<br/>Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.<br/>
-		<br/>Father of 1 and husband (also of 1).<br/>
-		<br/>Proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
-		<br/>
-		<h3><a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae in pdf</a></h3><br/>
-	</div>
-	
-	<div style="display: inline-block; width: 40%; margin-left:5px;">
-		<br/>Java examples published in <a href="http://examples.javacodegeeks.com/author/dani-buiza/">http://examples.javacodegeeks.com/author/dani-buiza/.</a><br/>
-		<br/>Tutorials published in the <a href="http://www.javacodegeeks.com/author/dani-buiza/">ttp://www.javacodegeeks.com/author/dani-buiza/</a><br/>
-		<br/><a href="http://danibuiza.wordpress.com/">My Personal Blog</a> with things I want to remember.<br/>
-		<br/><a href="http://helloworldforbegginers.wordpress.com/">IT Blog</a> with things I should remember.<br/>
-	
+		<br/>I am a Software Engineer with several years experience as consultant, developer, trainer and team lead. 
+		Currently I am working as technical lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.
+		I am the father of 1 and the husband of also 1. I am also a proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
+		<br>Here, you can download my <a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae</a> in pdf.<br/>
+		<br>I publish regularly <a href="http://examples.javacodegeeks.com/author/dani-buiza/">examples</a> and <a href="http://www.javacodegeeks.com/author/dani-buiza/">tutorials</a> for the java code geeks.</br>
+		<br>And I try to maintain my <a href="http://danibuiza.wordpress.com/">personal Blog</a> and a blog with <a href="http://helloworldforbegginers.wordpress.com/">IT stuff</a>.</br>
 	</div>
 	
 	<div style="float: right; width: 9%; ">
