one column only

--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
 		<br>Here, you can download my <a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae</a> in pdf.<br/>
 		<br>I publish regularly <a href="http://examples.javacodegeeks.com/author/dani-buiza/">examples</a> and <a href="http://www.javacodegeeks.com/author/dani-buiza/">tutorials</a> for the java code geeks.</br>
 		<br>And I try to maintain my <a href="http://danibuiza.wordpress.com/">personal Blog</a> and a blog with <a href="http://helloworldforbegginers.wordpress.com/">IT stuff</a>.</br>
-	</div>
-	
-	<div style="float: right; width: 9%; ">
-		<br/><a href="https://github.com/danibuiza">GitHub</a><br/>
-		<br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a><br/>
-		<br/><a href="https://www.xing.com/profile/DanielJose_GutierrezDiez">Xing</a><br/>
-		<br/><a href="http://about.me/danibuiza">About.me</a><br/>
-		<br/><a href="https://gist.github.com/danibuiza">Gists</a><br/>
-		<br/><a href="https://twitter.com/danibuiza">Twitter</a><br/>
-		<br/><a href="https://www.facebook.com/profile.php?id=554250456">Facebook</a><br/>
-		<br/><a href="https://plus.google.com/u/0/116967718539287219109/posts">Google Plus</a><br/>
-		<br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a><br/>
-		<br/><a href="http://www.dzone.com/links/users/profile/1264401.html">DZone</a><br/>
-		<br/><a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a><br/>
+
+		<br/>	
+		<br/><a href="https://github.com/danibuiza">GitHub</a>
+		<br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a>
+		<br/><a href="https://www.xing.com/profile/DanielJose_GutierrezDiez">Xing</a>
+		<br/><a href="http://about.me/danibuiza">About.me</a>
+		<br/><a href="https://gist.github.com/danibuiza">Gists</a>
+		<br/><a href="https://twitter.com/danibuiza">Twitter</a>
+		<br/><a href="https://www.facebook.com/profile.php?id=554250456">Facebook</a>
+		<br/><a href="https://plus.google.com/u/0/116967718539287219109/posts">Google Plus</a>
+		<br/><a href="http://stackoverflow.com/users/2236631/danibuiza">Stackoverflow</a>
+		<br/><a href="http://www.dzone.com/links/users/profile/1264401.html">DZone</a>
+		<br/><a href="https://www.google.de/?q=danibuiza#q=danibuiza">danibuiza</a
 	</div>
 </div>
 </body>
