--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		Currently I am working as technical lead for <a href="http://www.interactivedata.com/">Interactive Data</a> in Frankfurt.Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.
 		I am the father of 1 and the husband of also 1. I am also a proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
 		<br>Here, you can download my <a href="./files/cv%20plus%20projects%20dgd%202014.pdf">Curriculum Vitae</a> in pdf.<br/>
-		<br>I publish regularly <a href="http://examples.javacodegeeks.com/author/dani-buiza/">examples</a> and <a href="http://www.javacodegeeks.com/author/dani-buiza/">tutorials</a> and <a href="http://www.webcodegeeks.com/author/dani-buiza/"/>some more stuff</a> for the code geeks about Java and other technologies.</br>
+		<br>I publish regularly <a href="http://examples.javacodegeeks.com/author/dani-buiza/">examples</a> and <a href="http://www.javacodegeeks.com/author/dani-buiza/">tutorials</a> and <a href="http://www.webcodegeeks.com/author/dani-buiza/"/>some more stuff</a> for the code geeks about Java, JS and other technologies.</br>
 		<br>And I try to maintain my <a href="http://danibuiza.wordpress.com/">personal Blog</a> and a blog with <a href="http://helloworldforbegginers.wordpress.com/">IT stuff</a>.</br>
 		<br/>	
 		<br/><a href="https://github.com/danibuiza">GitHub</a>
