--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<br>And I try to maintain my <a href="http://danibuiza.wordpress.com/">personal Blog</a> and a blog with <a href="http://helloworldforbegginers.wordpress.com/">IT stuff</a>.</br>
 		<br/>	
 		<br/><a href="https://github.com/danibuiza">GitHub</a>
-		<br/><a href="https://www.linkedin.com/profile/view?id=10659921">LinkedIn</a>
+		<br/><a href="https://www.linkedin.com/in/daniel-gutierrez-diez-b296a03">LinkedIn</a>
 		<br/><a href="https://twitter.com/danibuiza">Twitter</a>
 	</div>
 </div>
