--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div style="width:100%;">
 	<div style="float: left; width: 50%; ">
 		<br/>I am a Software Engineer with several years experience as consultant, developer, trainer and team lead. 
-		Currently I am working as lead software engineer for <a href="http://www.factset.com/">Factset</a> in Frankfurt. Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.
+		Currently I am working as principal software engineer for <a href="http://www.factset.com/">Factset</a> in Frankfurt. Previously as consultant and software engineer for <a href="http://www.accenture.com">Accenture</a> and others.
 		I am the father of 2 and the husband of 1. I am also a proud <a href="http://www.realoviedo.es/en">Real Oviedo</a> share holder.<br/>
 		<br/>	
 		<br/><a href="https://www.linkedin.com/in/daniel-gutierrez-diez-b296a03">LinkedIn</a>
